syntax = "proto3";

package holisticPose;

message Landmark {
  // string name = 1;
  float x = 2;
  float y = 3;
  float z = 4;
  float confidence = 6;
}

message HolisticLandmarks{
  PoseLandmarks poseLandmarks = 1;
  HandLandmarks leftHandLandmarks = 2;
  HandLandmarks rightHandLandmarks = 3;
  FaceResults faceResults = 4;
}

message PoseLandmarks {
  repeated Landmark landmarks = 1;
  enum LandmarkIndex {
    nose = 0;
    leftEyeInner = 1;
    leftEye = 2;
    leftEyeOuter = 3;
    rightEyeInner = 4;
    rightEye = 5;
    rightEyeOuter = 6;
    leftEar = 7;
    rightEar = 8;
    mouthLeft = 9;
    mouthRight = 10;
    leftShoulder = 11;
    rightShoulder = 12;
    leftElbow = 13;
    rightElbow = 14;
    leftWrist = 15;
    rightWrist = 16;
    leftPinky = 17;
    rightPinky = 18;
    leftIndex = 19;
    rightIndex = 20;
    leftThumb = 21;
    rightThumb = 22;
    leftHip = 23;
    rightHip = 24;
    leftKnee = 25;
    rightKnee = 26;
    leftAnkle = 27;
    rightAnkle = 28;
    leftHeel = 29;
    rightHeel = 30;
    leftFootIndex = 31;
    rightFootIndex = 32;
  }
}

message HandLandmarks{
  repeated Landmark landmarks = 1;
  enum LandmarkIndex {
    wrist = 0;
    thumbCMC = 1;
    thumbMCP = 2;
    thumbIP = 3;
    thumbTIP = 4;
    indexFingerMCP = 5;
    indexFingerPIP = 6;
    indexFingerDIP = 7;
    indexFingerTIP = 8;
    middleFingerMCP = 9;
    middleFingerPIP = 10;
    middleFingerDIP = 11;
    middleFingerTIP = 12;
    ringFingerMCP = 13;
    ringFingerPIP = 14;
    ringFingerDIP = 15;
    ringFingerTIP = 16;
    pinkyMCP = 17;
    pinkyPIP = 18;
    pinkyDIP = 19;
    pinkyTIP = 20;
  }
}

message FaceResults{
  repeated Landmark landmarks = 1;
  Blendshapes blendshapes = 2;
}

message Blendshapes {
  repeated float scores = 1;
  enum BlendshapesIndex {
    _neutral = 0;
    browDownLeft =1;
    browDownRight =2;
    browInnerUp =3;
    browOuterUpLeft =4;
    browOuterUpRight =5;
    cheekPuff =6;
    cheekSquintLeft =7;
    cheekSquintRight =8;
    eyeBlinkLeft =9;
    eyeBlinkRight =10;
    eyeLookDownLeft = 11;
    eyeLookDownRight = 12;
    eyeLookInLeft = 13;
    eyeLookInRight = 14;
    eyeLookOutLeft = 15;
    eyeLookOutRight = 16;
    eyeLookUpLeft = 17;
    eyeLookUpRight = 18;
    eyeSquintLeft = 19;
    eyeSquintRight = 20;
    eyeWideLeft = 21;
    eyeWideRight = 22;
    jawForward = 23;
    jawLeft = 24;
    jawOpen = 25;
    jawRight = 26;
    mouthClose = 27;
    mouthDimpleLeft = 28;
    mouthDimpleRight = 29;
    mouthFrownLeft = 30;
    mouthFrownRight = 31;
    mouthFunnel = 32;
    mouthLeft = 33;
    mouthLowerDownLeft = 34;
    mouthLowerDownRight = 35;
    mouthPressLeft = 36;
    mouthPressRight = 37;
    mouthPucker = 38;
    mouthRight = 39;
    mouthRollLower = 40;
    mouthRollUpper = 41;
    mouthShrugLower = 42;
    mouthShrugUpper = 43;
    mouthSmileLeft = 44;
    mouthSmileRight = 45;
    mouthStretchLeft = 46;
    mouthStretchRight = 47;
    mouthUpperUpLeft = 48;
    mouthUpperUpRight = 49;
    noseSneerLeft = 50;
    noseSneerRight = 51;
    tongueOut = 52;
  }
}
